# ArcadeChess

./: .gitignore  Cargo.toml  README.md  api.yaml
resources/migrations/2025-03-26-184031_users/: up.sql
resources/migrations/2025-03-26-184453_double_chess_games/: down.sql  up.sql
resources/templates/: index.html  not-found.html
src/: main.rs
src/controller/: mod.rs  static.rs  template.rs  user.rs
src/controllers/: mod.rs  static_controller.rs  templates_controller.rs
src/database/: contract.rs  mod.rs  model.rs  repository.rs  schema.rs
src/database/model/: entity.rs  mod.rs  updatable.rs
src/database/repository/: game.rs  mod.rs  postgres.rs  user.rs
src/dto/: etc.rs  game.rs  mod.rs  user.rs
src/service/: mod.rs
src/util/: filter.rs  filters.rs
