[package]
name = "ArcadeChess"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.10.2"
actix-web-actors = "4.3.0"
actix-ws = "0.3.0"
actix-files = "0.6.6"
tokio = { version = "1.44.1", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
dotenvy = "0.15.7"
diesel = { version = "2.2.8", features = ["postgres", "r2d2", "uuid", "chrono", "numeric"] }
r2d2 = "0.8.10"
uuid = { version = "1.16.0", features = ["v4"] }
redis = "0.29.2"
mime = "0.3.17"
bigdecimal = "0.4.7"
chrono = "0.4.40"
